--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,9 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
+                <version>0.0.8</version>
                 <configuration>
-                    <mainClass>it.unipi.brewathome.App</mainClass>
+                    <mainClass>it.unipi.brewathome/it.unipi.brewathome.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
